# tree-sitter-basil

./: .gitignore  Cargo.toml  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_basil/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
