[package]
name = "tree-sitter-basil"
description = "Green"
version = "0.1.0"
authors = ["William Tetlie <william.tetlie@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "basil"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/roguemacro/basil"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
